--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "author": "ttntm",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "autoprefixer": "^10.2.5",
     "cssnano": "^4.1.10",
+    "express": "^4.19.2",
     "html-minifier": "^4.0.0",
     "postcss": "^8.2.9",
     "postcss-import": "^14.0.0",
